@@ -13,16 +13,27 @@
 // limitations under the License.
 package com.google.devtools.build.lib.remote.merkletree;
 
+import static com.google.common.base.Preconditions.checkArgument;
+import static java.util.Comparator.comparing;
+
 import build.bazel.remote.execution.v2.Digest;
 import com.google.common.annotations.VisibleForTesting;
+import com.google.common.collect.Collections2;
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.ImmutableSortedMap;
+import com.google.common.primitives.UnsignedBytes;
 import com.google.common.util.concurrent.ListenableFuture;
+import com.google.devtools.build.lib.actions.ActionInput;
+import com.google.devtools.build.lib.actions.FileArtifactValue;
 import com.google.devtools.build.lib.actions.cache.VirtualActionInput;
 import com.google.devtools.build.lib.remote.common.RemoteActionExecutionContext;
 import com.google.devtools.build.lib.remote.common.RemotePathResolver;
-import com.google.devtools.build.lib.vfs.Path;
+import com.google.devtools.build.lib.remote.util.DigestUtil;
+import java.util.Collection;
+import java.util.Comparator;
+import java.util.Map;
 import java.util.Optional;
+import java.util.SortedMap;
 
 /**
  * A representation of the inputs to a remotely executed action represented as a Merkle tree.
@@ -71,14 +82,57 @@ public sealed interface MerkleTree {
     record BlobsDiscarded(Digest digest, long inputFiles, long inputBytes) implements RootOnly {}
   }
 
-  /** A {@link MerkleTree} that retains all blobs that still need to be uploaded. */
+  /**
+   * A {@link MerkleTree} that retains all blobs that still need to be uploaded.
+   *
+   * <p>The empty blob doesn't have to be uploaded and is thus never included in the blobs map.
+   */
   final class Uploadable implements MerkleTree {
-    private final RootOnly.BlobsUploaded root;
-    private final ImmutableMap<Digest, /* byte[] | Path | VirtualActionInput */ Object> blobs;
+    private static final Comparator<Digest> DIGEST_COMPARATOR =
+        comparing(Digest::getHash).thenComparing(Digest::getSizeBytes);
+    private static final Comparator<FileArtifactValue> FILE_ARTIFACT_VALUE_COMPARATOR =
+        comparing(FileArtifactValue::getDigest, UnsignedBytes.lexicographicalComparator())
+            .thenComparing(FileArtifactValue::getSize);
+    static final Comparator<Object> DIGEST_AND_METADATA_COMPARATOR =
+        (o1, o2) ->
+            switch (o1) {
+              case Digest digest1 ->
+                  DIGEST_COMPARATOR.compare(
+                      digest1,
+                      switch (o2) {
+                        case Digest digest2 -> digest2;
+                        case FileArtifactValue metadata2 ->
+                            DigestUtil.buildDigest(metadata2.getDigest(), metadata2.getSize());
+                        default -> throw new IllegalStateException("Unexpected blob type: " + o2);
+                      });
+              case FileArtifactValue metadata1 ->
+                  switch (o2) {
+                    case FileArtifactValue metadata2 ->
+                        FILE_ARTIFACT_VALUE_COMPARATOR.compare(metadata1, metadata2);
+                    case Digest digest2 ->
+                        DIGEST_COMPARATOR.compare(
+                            DigestUtil.buildDigest(metadata1.getDigest(), metadata1.getSize()),
+                            digest2);
+                    default -> throw new IllegalStateException("Unexpected blob type: " + o2);
+                  };
+              default -> throw new IllegalStateException("Unexpected blob type: " + o1);
+            };
 
-    Uploadable(RootOnly.BlobsUploaded root, ImmutableMap<Digest, Object> blobs) {
+    private final RootOnly.BlobsUploaded root;
+    private final ImmutableSortedMap<Object, /* byte[] | ActionInput */ Object> blobs;
+    private final Digest emptyDigest;
+
+    Uploadable(
+        RootOnly.BlobsUploaded root,
+        SortedMap</* Digest | FileArtifactValue */ Object, /* byte[] | ActionInput */ Object> blobs,
+        Digest emptyDigest) {
       this.root = root;
-      this.blobs = blobs;
+      // A sorted map requires less memory than a regular hash map as it only stores two flat sorted
+      // arrays.
+      this.blobs = ImmutableSortedMap.copyOfSorted(blobs);
+      checkArgument(
+          emptyDigest.getSizeBytes() == 0, "Empty digest must have size 0: %s", emptyDigest);
+      this.emptyDigest = emptyDigest;
     }
 
     @Override
@@ -96,13 +150,111 @@ public sealed interface MerkleTree {
       return root().inputBytes();
     }
 
-    public ImmutableSet<Digest> allDigests() {
-      return blobs.keySet();
+    public int retainedBytes() {
+      // Example output of JOL's GraphLayout.parseInstance(...).toFootprint() for a
+      // MerkleTree.Uploadable:
+      //     COUNT       AVG       SUM   DESCRIPTION
+      //        18       180      3240   [B
+      //         2       112       224   [Ljava.lang.Object;
+      //         9        40       360   build.bazel.remote.execution.v2.Digest
+      //         1        40        40   com.google.common.collect.ImmutableSortedMap
+      //         2        16        32   com.google.common.collect.RegularImmutableList
+      //         1        24        24   com.google.common.collect.RegularImmutableSortedSet
+      //         1        32        32
+      // com.google.devtools.build.lib.remote.merkletree.MerkleTree$RootOnly$BlobsUploaded
+      //         1        16        16
+      // com.google.devtools.build.lib.remote.merkletree.MerkleTree$Uploadable
+      //         9        24       216   java.lang.String
+      //        44                4184   (total)
+      int size =
+          24 // MerkleTree.Uploadable object
+              + 32 // MerkleTree.RootOnly.BlobsUploaded object
+              + 40 // ImmutableSortedMap object
+              + 24 // RegularImmutableSortedSet object
+              + 2 * 16 // RegularImmutableList objects
+              + 2 * objectArrayShallowSize(blobs.size()); // arrays for keys and values
+      for (Object key : blobs.keySet()) {
+        size +=
+            switch (key) {
+              case Digest digest -> 40 + stringSize(digest.getHash());
+              // FileArtifactValue is retained by Skyframe anyway.
+              default -> 0;
+            };
+      }
+      for (Object value : blobs.values()) {
+        size +=
+            switch (value) {
+              case byte[] data -> byteArraySize(data.length);
+              case MerkleTreeComputer.EmptyInputDirectory ignored -> 16;
+              case MerkleTreeComputer.ChildActionInput childActionInput ->
+                  16 + stringSize(childActionInput.relativePath);
+              case Object[] directory -> {
+                // Compact directory representation from CompactDirectoryBuilder.
+                int dirSize = objectArrayShallowSize(directory.length);
+                for (Object item : directory) {
+                  dirSize +=
+                      switch (item) {
+                        case String str -> stringSize(str);
+                        // Other types (Digest, FileArtifactValue, MerkleTree, Artifact,
+                        // NodeProperties, Integer) are either counted elsewhere or retained
+                        // globally.
+                        case null, default -> 0;
+                      };
+                }
+                yield dirSize;
+              }
+              // Don't account for PathActionInput, which is only used in tests or remote repository
+              // execution. All other ActionInputs are retained anyway (permanently or, in the case
+              // of VirtualActionInput, by the Spawn).
+              default -> 0;
+            };
+      }
+      return size;
+    }
+
+    private int stringSize(String str) {
+      return 24 + byteArraySize(str.length());
+    }
+
+    private int objectArrayShallowSize(int length) {
+      return arraySize(length, 4);
+    }
+
+    private int byteArraySize(int length) {
+      return arraySize(length, 1);
+    }
+
+    private int arraySize(int length, int sizePerElement) {
+      // 8 byte header with -XX:+UseCompactObjectHeaders + 4 byte length field
+      int unpaddedSize = 12 + length * sizePerElement;
+      // Pad to multiples of 8 bytes.
+      return (unpaddedSize + 7) & ~7;
+    }
+
+    public Collection<Digest> allDigests() {
+      return Collections2.transform(blobs.keySet(), MerkleTree.Uploadable::adaptToDigest);
     }
 
     @VisibleForTesting
-    public ImmutableMap<Digest, Object> blobs() {
-      return blobs;
+    public Map<Digest, Object> blobs() {
+      return blobs.entrySet().stream()
+          .collect(
+              ImmutableMap.toImmutableMap(
+                  entry -> adaptToDigest(entry.getKey()),
+                  entry -> {
+                    var value = entry.getValue();
+                    if (value instanceof Object[] directory) {
+                      // Serialize compact directory representation to bytes for test compatibility.
+                      var out = new java.io.ByteArrayOutputStream();
+                      try {
+                        DirectoryBuilder.writeTo(out, directory, emptyDigest);
+                      } catch (java.io.IOException e) {
+                        throw new IllegalStateException("Failed to serialize directory", e);
+                      }
+                      return out.toByteArray();
+                    }
+                    return value;
+                  }));
     }
 
     @Override
@@ -119,14 +271,36 @@ public sealed interface MerkleTree {
         RemoteActionExecutionContext context,
         RemotePathResolver remotePathResolver,
         Digest digest) {
-      return switch (blobs.get(digest)) {
-        case byte[] data -> Optional.of(uploader.uploadBlob(context, digest, data));
-        case Path path ->
-            Optional.of(uploader.uploadFile(context, remotePathResolver, digest, path));
+      var blob = blobs.get(digest);
+      return switch (blob) {
         case VirtualActionInput virtualActionInput ->
-            Optional.of(uploader.uploadVirtualActionInput(context, digest, virtualActionInput));
+            Optional.of(
+                uploader.uploadDeterministicWriterOutput(context, digest, virtualActionInput));
+        case ActionInput actionInput -> {
+          var spawnExecutionContext = context.getSpawnExecutionContext();
+          var pathResolver =
+              spawnExecutionContext != null
+                  ? spawnExecutionContext.getPathResolver()
+                  // Used by MerkleTreeComputer#buildForFiles.
+                  : MerkleTreeComputer.actionInputWithPathResolver;
+          yield Optional.of(
+              uploader.uploadFile(
+                  context, remotePathResolver, digest, pathResolver.toPath(actionInput)));
+        }
         case null -> Optional.empty();
-        default -> throw new IllegalStateException("Unexpected blob type: " + blobs.get(digest));
+        default ->
+            Optional.of(
+                uploader.uploadDeterministicWriterOutput(
+                    context, digest, out -> DirectoryBuilder.writeTo(out, blob, emptyDigest)));
+      };
+    }
+
+    private static Digest adaptToDigest(Object key) {
+      return switch (key) {
+        case Digest digest -> digest;
+        case FileArtifactValue metadata ->
+            DigestUtil.buildDigest(metadata.getDigest(), metadata.getSize());
+        default -> throw new IllegalStateException("Unexpected blob type: " + key);
       };
     }
   }
